--- a/src/Components/App.css
+++ b/src/Components/App.css
@@ -1,7 +1,3 @@
-.App {
-
-}
-
 .Resizer {
   background: #000;
   opacity: .2;
@@ -35,7 +31,7 @@
 
 .Resizer.vertical {
   width: 11px;
-  margin: 0 -4px;
+  margin: 0 -5px;
   border-left: 5px solid rgba(255, 255, 255, 0);
   border-right: 5px solid rgba(255, 255, 255, 0);
   cursor: col-resize;
@@ -50,4 +46,9 @@ cursor: not-allowed;
 }
 .Resizer.disabled:hover {
 border-color: transparent;
+}
+
+.ms-CommandBar {
+  height: 30px;
+  border-bottom: solid 1px rgba(0, 0, 0, 0.2);
 }
