Create models in FileContentStore

--- a/src/Components/App.css
+++ b/src/Components/App.css
@@ -76,7 +76,7 @@
   text-overflow: ellipsis;
 }
 
-.custom-CommandBar .text {
+.command-bar-text {
   padding: 0 4px;
   flex: 1;
   overflow: hidden;
